DevOps_11/src/services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:management
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: session 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: session 
    spec:
      containers:
        - name: session-service 
          image: beyonder112/devops_7:session 
---
apiVersion: v1
kind: Service
metadata:
  name: session-service
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: session

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: hotel 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: hotel 
    spec:
      containers:
        - name: hotel 
          image: beyonder112/devops_7:hotel 
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: hotel

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: booking
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: booking 
    spec:
      containers:
        - name: booking 
          image: beyonder112/devops_7:booking 
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: booking

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: payment 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: payment 
    spec:
      containers:
        - name: payment 
          image: beyonder112/devops_7:payment 
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: payment

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: loyalty 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: loyalty 
    spec:
      containers:
        - name: loyalty 
          image: beyonder112/devops_7:loyalty 
---
apiVersion: v1
kind: Service
metadata:
  name: loyalty-service
spec:
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: loyalty

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: report 
  template:
    metadata:
      labels:
        app: report 
    spec:
      containers:
        - name: report 
          image: beyonder112/devops_7:report 
---
apiVersion: v1
kind: Service
metadata:
  name: report-service
spec:
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: report

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: gateway 
  template:
    metadata:
      labels:
        app: gateway 
    spec:
      containers:
        - name: gateway 
          image: beyonder112/devops_7:gateway 
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  ports:
    - port: 8087
      targetPort: 8087
  selector:
    app: gateway
