DevOps_11/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devops-11.local
    secretName: selfsigned-cert-secret
  rules:
    - host: "devops-11.local"
      http:
        paths:
        - path: /api/v1/gateway(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: gateway-service
              port:
                number: 8087
        - path: /api/v1/auth(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: session-service
              port:
                number: 8081
